src/test/ui/conditional-compilation/cfg-attr-parse.stderr
error: expected identifier, found `)`
  --> $DIR/cfg-attr-parse.rs:4:12
   |
LL | #[cfg_attr()]
   |            ^ expected identifier

error: expected `,`, found `)`
  --> $DIR/cfg-attr-parse.rs:8:17
   |
LL | #[cfg_attr(all())]
   |                 ^ expected `,`

error: expected identifier, found `,`
  --> $DIR/cfg-attr-parse.rs:16:18
   |
LL | #[cfg_attr(all(),,)]
   |                  ^ expected identifier

error: expected identifier, found `,`
  --> $DIR/cfg-attr-parse.rs:28:28
   |
LL | #[cfg_attr(all(), must_use,,)]
   |                            ^ expected identifier

error: expected identifier, found `,`
  --> $DIR/cfg-attr-parse.rs:40:40
   |
LL | #[cfg_attr(all(), must_use, deprecated,,)]
   |                                        ^ expected identifier

error: aborting due to 5 previous errors

